--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <!-- Page Header -->
     <header class="header">
-      <div class="container">
+      <div class="container container-header">
         <nav class="nav-page">
           <a class="logo" href=" ./index.html">
             WEB<span class="logo-part">Studio</span>
@@ -37,12 +37,12 @@
 
         <address class="address">
           <ul class="address-page">
-            <li>
+            <li class="address-item">
               <a class="address-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
-            </li>
-            <li>
+            </li class="address-item">
+            <li >
               <a class="address-link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
