--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VEBSTUDIO</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -17,6 +11,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -41,8 +42,8 @@
               <a class="address-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
-            </li class="address-item">
-            <li >
+            </li>
+            <li class="address-item">
               <a class="address-link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
@@ -235,18 +236,16 @@
     </main>
 
     <!-- Footer -->
-    <section>
-      <div class="container">
-        <footer class="footer">
-          <a class="footer-logo" href=" ./index.html">
-            WEB<span class="footer-logo-part">Studio</span>
-          </a>
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </footer>
-      </div>
-    </section>
+    <div class="container">
+      <footer class="footer">
+        <a class="footer-logo" href=" ./index.html">
+          WEB<span class="footer-logo-part">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
