--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <!-- Our advantages -->
       <section class="page-our-advantages">
         <div class="container">
-          <h2 hidden>Our advantages</h2>
+          <h2 visually-hidden>Our advantages</h2>
           <ul class="our-advantages-item">
             <li class="our-advantages-list">
               <h3 class="our-advantages">Strategy</h3>
@@ -237,7 +237,7 @@
 
     <!-- Footer -->
     <div class="container">
-      <footer class="footer">
+      <div class="footer">
         <a class="footer-logo" href=" ./index.html">
           WEB<span class="footer-logo-part">Studio</span>
         </a>
@@ -246,6 +246,7 @@
           digital marketing & growth solutions.
         </p>
       </footer>
+      </div>
     </div>
   </body>
 </html>
