--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VEBSTUDIO</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -69,7 +63,7 @@
       <!-- Our advantages -->
       <section class="page-our-advantages">
         <div class="container">
-          <h2 visually-hidden>Our advantages</h2>
+          <h2 class="visually-hidden">Our advantages</h2>
           <ul class="our-advantages-item">
             <li class="our-advantages-list">
               <h3 class="our-advantages">Strategy</h3>
@@ -236,6 +230,7 @@
     </main>
 
     <!-- Footer -->
+    <footer>
     <div class="container">
       <div class="footer">
         <a class="footer-logo" href=" ./index.html">
