--- a/index.html
+++ b/index.html
@@ -236,17 +236,15 @@
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
       <div class="container">
-        <div class="footer">
-          <a class="footer-logo" href=" ./index.html">
-            WEB<span class="footer-logo-part">Studio</span>
-          </a>
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <a class="footer-logo" href=" ./index.html">
+          WEB<span class="footer-logo-part">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
