--- a/index.html
+++ b/index.html
@@ -177,8 +177,10 @@
                 alt="Галерея сторінок застосунку Banking App"
                 width="360"
               />
-              <h3 class="our-portfolio-title">Banking App</h3>
-              <p class="our-portfolio-list">App</p>
+              <div class="our-portfolio-card-item">
+                <h3 class="our-portfolio-title">Banking App</h3>
+                <p class="our-portfolio-list">App</p>
+              </div>
             </li>
 
             <li class="our-portfolio-card">
@@ -187,8 +189,10 @@
                 alt="Сканування за допомогою телефону"
                 width="360"
               />
-              <h3 class="our-portfolio-title">Cashless Payment</h3>
-              <p class="our-portfolio-list">Marketing</p>
+              <div class="our-portfolio-card-item">
+                <h3 class="our-portfolio-title">Cashless Payment</h3>
+                <p class="our-portfolio-list">Marketing</p>
+              </div>
             </li>
 
             <li class="our-portfolio-card">
@@ -197,8 +201,10 @@
                 alt="Монітор ноутбуку поруч телефон"
                 width="360"
               />
-              <h3 class="our-portfolio-title">Meditation App</h3>
-              <p class="our-portfolio-list">App</p>
+              <div class="our-portfolio-card-item">
+                <h3 class="our-portfolio-title">Meditation App</h3>
+                <p class="our-portfolio-list">App</p>
+              </div>
             </li>
 
             <li class="our-portfolio-card">
@@ -207,8 +213,10 @@
                 alt="Фото місця водія за кермом поруч телефон"
                 width="360"
               />
-              <h3 class="our-portfolio-title">Taxi Service</h3>
-              <p class="our-portfolio-list">Marketing</p>
+              <div class="our-portfolio-card-item">
+                <h3 class="our-portfolio-title">Taxi Service</h3>
+                <p class="our-portfolio-list">Marketing</p>
+              </div>
             </li>
 
             <li class="our-portfolio-card">
@@ -217,8 +225,10 @@
                 alt="Мобільний телефон яскрава картинка на екрані"
                 width="360"
               />
-              <h3 class="our-portfolio-title">Screen Illustrations</h3>
-              <p class="our-portfolio-list">Design</p>
+              <div class="our-portfolio-card-item">
+                <h3 class="our-portfolio-title">Screen Illustrations</h3>
+                <p class="our-portfolio-list">Design</p>
+              </div>
             </li>
 
             <li class="our-portfolio-card">
@@ -227,8 +237,10 @@
                 alt="Фото жінки в помаранчевому светрі"
                 width="360"
               />
-              <h3 class="our-portfolio-title">Online Courses</h3>
-              <p class="our-portfolio-list">Marketing</p>
+              <div class="our-portfolio-card-item">
+                <h3 class="our-portfolio-title">Online Courses</h3>
+                <p class="our-portfolio-list">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
